[gd_scene load_steps=10 format=2]

[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_shoot/soldiershootsprite_1.png" type="Texture" id=1]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_shoot/soldiershootsprite_0.png" type="Texture" id=2]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_walk/soldierwalksprite_2.png" type="Texture" id=3]
[ext_resource path="res://Placeholder Textures for Shards of the Past/character_soldier_walk/soldier_hurt.png" type="Texture" id=4]
[ext_resource path="res://SoldierEnemy_static.gd" type="Script" id=5]
[ext_resource path="res://sfx/sounds/gunshot.ogg" type="AudioStream" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "attack",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 9, 11 )

[sub_resource type="CircleShape2D" id=3]
radius = 72.0

[node name="SoldierEnemy_static" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 0.499999 )
scale = Vector2( 1, 1.04545 )
frames = SubResource( 1 )
animation = "attack"
frame = 1
playing = true
flip_h = true

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -0.500001 )
scale = Vector2( 1, 1.04545 )
texture = ExtResource( 4 )
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -13, 4 )

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.75

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2( -72, 0 )
shape = SubResource( 3 )

[node name="Timer3" type="Timer" parent="."]
wait_time = 0.25

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
